
[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "jwt-authenticator"
version = "1.0.8"
authors = [{ name = "Mike Nacey", email = "nobody@teletracking.com"}]
description = "Simple JWT token flask service security library."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["jwt", "flask", "authentication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "pyjwt"
]

[project.optional-dependencies]
RSA = ["cryptography>42.0.0"]

[project.urls]
"Source" = "https://github.com/TeleTrackingTechnologies/jwt_authenticator"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "cryptography>=43.0.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
