
[project]
name = "jwt-authenticator"
dynamic = ["version"]
authors = [{ name = "Mike Nacey", email = "nobody@teletracking.com"}]
description = "Simple JWT token flask service security library."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["jwt", "flask", "authentication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=43.0.3",
    "flask>=3.0.3",
    "pyjwt>=2.9.0",
]

[project.urls]
"Source" = "https://github.com/TeleTrackingTechnologies/jwt_authenticator"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "cryptography>=43.0.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
